--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_ID=15818412
 API_HASH=ee2f43902dbe55a0bbe42d3a6dc10434
 SESSION_NAME=research_account
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
 DB_NAME=tg_analyzer
 DB_USER=tgadmin
