--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,34 @@
 version: "3.9"
+
 services:
   dashboard:
     build: .
     container_name: tg-dashboard
+    init: true
     env_file:
       - .env
+    depends_on:
+      - db
     ports:
       - "8501:8501"
     volumes:
-      - ./:/app
+      - ./research_account.session:/app/research_account.session
+      - ./config.yaml:/app/config.yaml
+      - ./runtime:/app/runtime
+      - ./logs:/app/logs
     restart: unless-stopped
+
+  db:
+    image: postgres:15-alpine
+    container_name: tg-db
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+volumes:
+  db_data:
 
